dbus-gobject: wrap the GSList of registrations in a simple struct

For simplicity, the ObjectExport struct isn't freed until the object
is actually destroyed, even if there are no more registrations.

Reviewed-by: Cosimo Alfarano <cosimo.alfarano@collabora.co.uk>
Bug: https://bugs.freedesktop.org/show_bug.cgi?id=36811